--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "firebase": "^7.2.0",
+    "jquery": "^3.4.1",
+    "lodash": "^4.17.15",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-items-carousel": "^2.8.0",
     "react-scripts": "3.0.1"
   },
   "scripts": {
