--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-items-carousel": "^2.8.0",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.0.1"
   },
   "scripts": {
