--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-items-carousel": "^2.8.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "webpack": "^4.29.6"
   },
   "scripts": {
     "start": "react-scripts start",
